# dsearch

./: .env  .gitignore  Dockerfile  README.md  docker-compose.local-es.yml  docker-compose.offline.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_server.sh  setup.sh
app/api/v1/: __init__.py
app/api/v1/admin/: endpoints.py
app/api/v1/auth/: endpoints.py
app/api/v1/batch/: endpoints.py
app/api/v1/ml/: endpoints.py
app/api/v1/ranking/: endpoints.py
app/api/v1/search/: endpoints.py
app/api/v1/utility/: endpoints.py
app/core/: config.py  logging.py  security.py
app/models/: __init__.py  base.py  batch.py  ranking.py  search.py  user.py
app/services/: __init__.py  elasticsearch.py  ranking_service.py
app/services/batch/: __init__.py  batch_service.py  document_processor.py  job_scheduler.py
app/services/ml/: __init__.py  openai_service.py  rag_service.py  recommendation_service.py
app/services/redis/: __init__.py  cache_service.py  redis_service.py  session_service.py
app/services/search/: __init__.py  autocomplete_service.py  highlighter.py  search_service.py  text_analyzer.py  typo_correction_service.py  vector_service.py
app/utils/: __init__.py  file_handler.py  text_extractor.py
